# pupil

./: .gitignore  Cargo.toml  README.md
container/: .dockerignore  Dockerfile
crates/pupil-agent/: Cargo.toml
crates/pupil-agent/src/: error.rs  lib.rs  logging.rs  main.rs  test_schema.rs
crates/pupil-agent/src/agent/: mod.rs
crates/pupil-agent/src/collaboration/: mod.rs  tool.rs
crates/pupil-agent/src/config/: mod.rs
crates/pupil-agent/src/conversation/: mod.rs
crates/pupil-agent/src/learn/: learner.rs  manifest.rs  mod.rs  prompt.rs  reader.rs  source.rs  verifier.rs
crates/pupil-agent/src/learn/extract/: html.rs  markdown.rs  mod.rs  pdf.rs  text.rs
crates/pupil-agent/src/learn/profiles/: code.txt  conceptual.txt  faq.txt  general.txt  policy.txt  procedural.txt  reference.txt
crates/pupil-agent/src/llm/: genai_provider.rs  mod.rs  openai_compat.rs  pricing.rs  provider.rs
crates/pupil-agent/src/mcp/: config.rs  mod.rs  normalize.rs  schema.rs
crates/pupil-agent/src/prompt/: mod.rs
crates/pupil-agent/src/server/: mod.rs
crates/pupil-cli/: Cargo.toml
crates/pupil-cli/src/: agent_config.rs  error.rs  lib.rs  logging.rs  main.rs
crates/pupil-cli/src/commands/: build.rs  commit.rs  completions.rs  config.rs  create.rs  doctor.rs  export.rs  import.rs  inspect.rs  list.rs  logs.rs  mod.rs  pull.rs  push.rs  router.rs  run.rs  status.rs  sync.rs  teach.rs  test.rs  watch.rs
crates/pupil-cli/src/config/: mod.rs
crates/pupil-cli/src/container/: compose.rs  docker.rs  image.rs  mod.rs  podman.rs
crates/pupil-cli/src/output/: mod.rs
crates/pupil-cli/src/progress/: mod.rs
crates/pupil-cli/src/router/: config.rs  discovery.rs  health.rs  mod.rs  proxy.rs  strategies.rs
crates/pupil-cli/src/templates/: chatbot.yaml  full.yaml  knowledge-base.yaml  minimal.yaml
crates/pupil-cli/src/wizard/: mod.rs
docs/: GLOSSARY.md  architecture.md  benchmark.md  configuration.md  testing.md  user-guide.md
examples/astronomy-agent/: NOTICE  pupil.yaml  tests.yaml
examples/astronomy-agent/benchmark/: mmlu-astronomy.yaml
examples/onboarding-bot/: pupil.yaml  tests.yaml
examples/onboarding-bot/curriculum/: handbook.md
examples/phantomwiki-agent/: NOTICE  pupil.yaml  setup.sh
