[package]
name = "pupil-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "pupil"
path = "src/main.rs"

[dependencies]
# --- CLI parsing ---
clap = { workspace = true }
clap_complete = "4"

# --- Async runtime ---
tokio = { workspace = true }

# --- Serialization ---
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

# --- Progress and terminal UI ---
indicatif = "0.18"
console = "0.15"
dialoguer = "0.11"
tabled = "0.17"

# --- Logging ---
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = "0.3"

# --- Error handling ---
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# --- OCI / container image ---
oci-client = "0.13"
oci-spec = "0.7"
ocipkg = "0.3"
tar = "0.4"
flate2 = "1.0"

# --- Hashing ---
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# --- Filesystem and environment ---
dirs = "6"
which = "7"

# --- HTTP client ---
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# --- HTTP server (router) ---
axum = { version = "0.8", features = ["json"] }

# --- Concurrent data structures (router) ---
dashmap = "6"

# --- Async utilities (router) ---
tokio-util = "0.7"

# --- Filesystem watching ---
notify = "8"
notify-debouncer-full = "0.7"

# --- Testing output ---
quick-junit = "0.5"
regex = "1"

# --- Filesystem traversal ---
glob = "0.3"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# --- Metrics ---
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# --- Container runtime helpers ---
libc = "0.2"
async-trait = "0.1"

# --- Retry and security (used by sync) ---
backoff = { version = "0.4", features = ["tokio"] }
secrecy = { version = "0.10", features = ["serde"] }

# --- URL parsing, timestamps, robots.txt (used by sync/watch) ---
url = "2"
chrono = { version = "0.4", features = ["serde"] }
texting_robots = "0.2"

# --- Allocator (musl targets) ---

[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = { workspace = true }
